force-app/main/default/objects/Account/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <label>Capital</label>
    <length>100</length>
    <type>Text</type>
</CustomField>