force-app/main/default/objects/Account/fields/compliancequest__Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Account_Classification__c</fullName>
    <description>Specifies the CQ Classification for the account.</description>
    <label>Account Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Combined Minority and Woman owned</fullName>
            </value>
            <value>
                <fullName>Disabled Veteran Owned</fullName>
            </value>
            <value>
                <fullName>Disadvantaged</fullName>
            </value>
            <value>
                <fullName>Foreign Owned Business Enterprise</fullName>
            </value>
            <value>
                <fullName>Government or Non-Profit</fullName>
            </value>
            <value>
                <fullName>Hub Zone</fullName>
            </value>
            <value>
                <fullName>Large Business Enterprise</fullName>
            </value>
            <value>
                <fullName>LGBT Owned</fullName>
            </value>
            <value>
                <fullName>Minority Owned</fullName>
            </value>
            <value>
                <fullName>Minority Woman Owned</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
            <value>
                <fullName>Veteran Owned</fullName>
            </value>
            <value>
                <fullName>Woman Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>