force-app/main/default/objects/Account/fields/compliancequest__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Approval_Status__c</fullName>
    <description>CQ Approval Status of the account</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Disapproved</fullName>
            </value>
            <value>
                <fullName>Conditionally Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>