force-app/main/default/objects/Account/fields/compliancequest__CQ_Owner__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__CQ_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Records CQ User who owns or manages the account record. It is used for CQ related tasks such as sending CQ notifications.</description>
    <label>CQ Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SQX_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>