force-app/main/default/objects/Account/fields/compliancequest__Expired_Supplier_Document__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Expired_Supplier_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines when any supplier document has expired.</description>
    <label>Expired Supplier Document</label>
    <type>Checkbox</type>
</CustomField>