force-app/main/default/objects/Account/fields/compliancequest__Next_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Next_Audit_Date__c</fullName>
    <description>The date when next audit should be scheduled in CQ for the account</description>
    <label>Next Audit Date</label>
    <type>Date</type>
</CustomField>