force-app/main/default/objects/Account/fields/compliancequest__SQX_Supplier_Escalation__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__SQX_Supplier_Escalation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Records currently active supplier escalation.</description>
    <label>Active Supplier Escalation</label>
    <lookupFilter>
        <active>true</active>
        <description>Filter to show only Supplier Escalation related to the Account</description>
        <errorMessage>Supplier Escalation is not related to the Supplier</errorMessage>
        <filterItems>
            <field>compliancequest__SQX_Supplier_Escalation__c.compliancequest__SQX_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>compliancequest__SQX_Supplier_Escalation__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>SQX_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>