force-app/main/default/objects/Account/recordTypes/compliancequest__CQ_Supplier.recordType-meta.xml
<RecordType>
    <fullName>compliancequest__CQ_Supplier</fullName>
    <active>true</active>
    <description>This record type is related to supplier Account</description>
    <label>Supplier</label>
</RecordType>