force-app/main/default/objects/Account/validationRules/compliancequest__Restrict_SupplierUsers_modify_few_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__Restrict_SupplierUsers_modify_few_fields</fullName>
    <active>true</active>
    <description>Supplier Admin is not allowed to modify Mandatory field (Account #, Supplier Name , Government Id) in Supplier Profile.</description>
    <errorConditionFormula>AND( NOT($Permission.compliancequest__SQXDataMigrationCustomPermission), ISCHANGED( Name )
,   
($Profile.Name  = &apos;SQX Partner Community ADMIN User&apos; ||$Profile.Name  =&apos;SQX Customer Community User&apos; ))</errorConditionFormula>
    <errorMessage>Account  Name is NOT allowed to be modified</errorMessage>
</ValidationRule>