force-app/main/default/objects/Account/listViews/compliancequest__Active_Suppliers.listView-meta.xml
<ListView>
    <fullName>compliancequest__Active_Suppliers</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>compliancequest__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>compliancequest__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Suppliers</label>
    <language>en_US</language>
</ListView>