force-app/main/default/objects/Account/listViews/compliancequest__AllAccounts.listView-meta.xml
<ListView>
    <fullName>compliancequest__AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>compliancequest__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>